assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

/* Global Styles ------------------------------------------------- */

body {
    font-family: 'Roboto', sans-serif;
    color: #e2e2e2;
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    overflow: overlay;
    margin-bottom: 75px;
}

.main-window {
    margin-top: 60px;
}

p {
    padding: 0.5rem 0;
    margin-bottom: 0;
}

.text-chunk {
    margin: 10px 5px;
}

hr {
    margin-bottom: 10px;
}

.status {
    margin-bottom: 1px;
    padding-top: 4px;
    width: 100px;
    height: 25px;
    border-radius: 10px;
    text-align: center;
    font-size: 0.9rem;
    border: 1px solid black;
}

.project-progress {
    position: absolute;
    right: 50px;
}

.complete {
    background-color: rgb(33, 150, 50);
}

.update {
    background-color: rgb(148, 134, 5);
}

.development {
    background-color: rgb(230, 90, 10);
}

.inception {
    background-color: rgb(30, 140, 170);
}

.live {
    background-color: rgb(200, 40, 120);
}

.square {
    width: 100%;
    height: 50px;
    border: 1px solid greenyellow;
    background-color: hotpink;
}

#introduction {
    text-align: center;
    vertical-align: middle;
}

.arrow {
    margin-top: 20px;
}

.fa-angle-double-down {
    font-size: 40px;
}

.fa-angle-double-down:hover {
    color: rgb(200, 40, 120);
}


/* Navigation ---------------------------------------------------- */

.list-group-item {
    font-size: 0.9rem;
    color: #e2e2e2;
}

.offcanvas-body {
    overflow-y: visible;
}

.navbar {
    padding: 0;
}

.navbar-dark {
    color: none;
    padding: 0.25rem;
    border: none;
}

.navbar{
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

footer {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    position: fixed;
    bottom: 0;
    width: 100%;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
}

.nav-link {
    color: #8f8f8f;
    margin: 0.25rem;
    padding-top: 0.5rem;
    padding-bottom: 0.25rem;
}

.nav-link:hover {
    color: rgb(200, 40, 120);
}

.nav-link:focus {
    color: #8f8f8f;
}

.active {
    color: white;
    border-bottom: 1px solid rgb(200, 40, 120);
}

.navbar-brand {
    color: white;
}

.navbar-brand:hover {
    color: rgb(200, 40, 120);
}


.navbar-toggler{
    padding: 0;
}

.navbar-toggler:focus {
    box-shadow: none;
}

.btn {
    position: relative;
    top: 10px;
}

.btn-sm {
    padding: 0.1rem 0.4rem;
    font-size: .75rem;
    border-radius: 0.2rem;
}

.btn-group-sm>.btn {
    padding: 0.1rem 0.4rem;
    font-size: .75rem;
    border-radius: 0.2rem;
}

.dropdown-menu {
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    border: 1px solid rgb(70, 70, 70);
}

.dropdown-item {
    color: #e2e2e2;
}

.settings {
    color: #e2e2e2;
    margin-left: 10px;
    padding: 4px;
}

a {
    color: #d63384;
    text-decoration: none;
}

.animated-icon {
    width: 30px;
    height: 22px;
    position: relative;
    margin: 0px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    cursor: pointer;
}

.animated-icon span{
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    border-radius: 9px;
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    -o-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
}

.animated-icon span {
    background: #e3f2fd;
}

.animated-icon span:nth-child(1) {
    top: 0px;
}
.animated-icon span:nth-child(2), .animated-icon span:nth-child(3) {
    top: 10px;
}
.animated-icon span:nth-child(4) {
    top: 20px;
}
.animated-icon.open span:nth-child(1) {
    top: 11px;
    width: 0%;
    left: 50%;
}
.animated-icon.open span:nth-child(2) {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
}
.animated-icon.open span:nth-child(3) {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
}
.animated-icon.open span:nth-child(4) {
    top: 11px;
    width: 0%;
    left: 50%;
}

/* Code taken from */
/* https://mdbootstrap.com/docs/b4/jquery/navigation/hamburger-menu/ */

/* Headings ------------------------------------------------------ */

h1 {
    font-size: 1.4rem;
}

h2 {
    font-size: 1.3rem;
    margin-bottom: 2px;
}

h3 {
    font-size: 1.1rem;
    margin-bottom: 0;
}

h4 {
    font-size: 1rem;
    color: rgb(150, 150, 150);
}

.center {
    text-align: center;
}

.title {
    margin: 10px 0 20px 0;
}

.highlight {
    color: rgb(200, 40, 120);
}

.highlight-green {
    color: greenyellow;
}

.row>* {
    padding: 0;
}

/* Progress Bars ------------------------------------------------- */

.progress {
    position: relative;
    height: 25px;
    margin: 10px 0;
}

.progress-type {
    position: absolute;
    left: 5px;
    font-weight: 500;
    font-size: 1.1rem;
    color: #111111;
}

.progress-bar {
    background: repeating-linear-gradient(135deg, rgba(230, 50, 130, 0.8) 15px, rgb(210, 30, 110, 0.8) 30px);
}

.sr-only {
    color: seagreen;
}


/* Cards --------------------------------------------------------- */

.card {
    max-width: 100%;
    margin-top: 5px;
    margin-bottom: 10px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border: 1px solid #666;
}

.list-group-item {
    font-size: 0.9rem;
    padding: 6px 16px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
}

li {
    padding: 2px 0;
}


/* Cards --------------------------------------------------------- */

.accordion {
    margin-bottom: 20px;
}

.accordion-item {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border: none;
}


/* .accordion-flush{
    border: 1px solid rgba(255, 255, 255, 0.1);
} */

.accordion-button {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
    /* margin: 5px 0; */
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    border-right: 1px solid rgba(255, 255, 255, 0.2);
    border-left: 1px solid rgba(255, 255, 255, 0.2);
}

.accordion-button:focus {
    border: none;
    box-shadow: none;
}

.accordion-body {
    border: 1px solid rgba(255, 255, 255, 0.2);
}

.accordion-button:not(.collapsed) {
    color: #e2e2e2;
    box-shadow: none;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    border-right: 1px solid rgba(255, 255, 255, 0.2);
    border-left: 1px solid rgba(255, 255, 255, 0.2);
    margin: 0;
}

.fa-html5,
.fa-css3-alt,
.fa-github {
    font-size: 1.2rem;
    margin-left: 5px;
}

#introduction{
    margin-top: 100px;
}

/* Form ---------------------------------------------------------- */

.form-label {
    margin: 5px 0 0 0;
}

.form-control {
    padding: 0.25rem 0.5rem;
    background-color: rgba(40, 40, 40, .5);
    color: white;
}

.form-control:focus {
    background-color: rgba(50, 50, 50, .5);
    color: white;
}

.form-select {
    padding: 0.25rem 2.25rem 0.25rem 0.25rem;
    background-color: rgba(20, 20, 20, .5);
}

.footer {
    position: fixed;
    bottom: 0;
}

.footer-text {
    padding: 2px 0;
}

.footer-section {
    text-align: center;
}


/* Scrollbar ----------------------------------------------------- */

::-webkit-scrollbar {
    background: transparent;
    width: 6px;
}

::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(53, 53, 53, 0.733);
    -webkit-box: inset 0 0 6px rgb(81, 160, 153);
}

